--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Silvia Lopez | Home</title>
 </head>
 
@@ -15,10 +16,10 @@
     <div id="page-container">
         <main>
             <div id="about-content">
-                <div class="portrait-frame hidden">
+                <div class="portrait-frame">
                     <img class="portrait-img" src="portrait.jpg">
                 </div>
-                <div class="personal-summary hidden">
+                <div class="personal-summary">
                     <div>
                         <h1 id="first-name">silvia</h1>
                         <h1 id="last-name"> LOPEZ</h1>
@@ -37,18 +38,18 @@
                 <br />
                 <div id="icon-container">
                     <a href="https://www.linkedin.com/in/silvia-lopez-1a9468204/">
-                        <img class="icon hidden" src="linkedin.png">
+                        <img class="icon" src="linkedin.png">
                     </a>
                     <a href="https://github.com/silvialpz">
-                        <img class="icon hidden" src="github.png">
+                        <img class="icon" src="github.png">
                     </a>
                     <a href="">
-                        <img class="icon hidden" src="downloading.png">
+                        <img class="icon" src="downloading.png">
                     </a>
                 </div>
 
             </div>
-<!-- 
+
             <br />
 
             <div>
@@ -189,7 +190,7 @@
             <br />
             <div id="contact-content">
                 <p>contact goes here</p>
-            </div> -->
+            </div>
         </main>
     </div>
     <footer>
