icon delay if inally working

--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,14 @@
                 </div>
                 <br />
                 <div id="icon-container">
-                    <a href="https://www.linkedin.com/in/silvia-lopez-1a9468204/">
-                        <img class="icon hidden" src="linkedin.png">
+                    <a href="https://www.linkedin.com/in/silvia-lopez-1a9468204/" class="icon hidden">
+                        <img class="icon-img" src="linkedin.png">
                     </a>
-                    <a href="https://github.com/silvialpz">
-                        <img class="icon hidden" src="github.png">
+                    <a href="https://github.com/silvialpz" class="icon hidden">
+                        <img class="icon-img" src="github.png">
                     </a>
-                    <a href="">
-                        <img class="icon hidden" src="downloading.png">
+                    <a href="" class="icon hidden">
+                        <img class="icon-img" src="downloading.png">
                     </a>
                 </div>
 
