removing menu for now

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <a href="about.html">About</a>
         <a href="contact.html">Resume</a>
         <a href="projects.html">Contact</a>
-    </header>
+    </header> -->
     <div id="page-container">
         <main>
             <div id="about-content">
@@ -26,8 +26,7 @@
                     </div>
                     <div>
                         <p>I am a soon-to-be computer engineering graduate from the University of Toronto and a Pearson
-                            Scholar. I am a very visual person, the common theme you will notice in my resume is that I
-                            have worked on visualizers and graphical user interfaces. I am an artist, I draw and paint
+                            Scholar. I am a very visual thinker and artist, I draw and paint
                             which is why I have an affinity for designing visually appealing user interfaces but beyond
                             that I am interested in how the tools we use work on a lower level. The university courses
                             in computer graphics and computer architecture I’ve taken have inspired my career goal,
