--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
     </div>
     <footer>
         <div>
-            <p>Copyright 2024 by lopezpo1</p>
+            <p>Copyright 2024 by Silvia Lopez</p>
         </div>
     </footer>
 
