resume is starting to look nice

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </header> -->
     <div id="page-container">
         <main>
-            <div id="about-content">
+            <div class="content">
                 <div class="portrait-frame hidden">
                     <img class="portrait-img" src="portrait.jpg">
                 </div>
@@ -47,14 +47,15 @@
                 </div>
 
             </div>
-<!-- 
+
             <br />
 
+
             <div>
-                <p>EDUCATION</p>
+                <p class="resume-section">EDUCATION</p>
             </div>
 
-            <div class="container">
+            <div class="content">
                 <div id="degree-container">
                     <div id="degree-title">
                         <img id="utoronto-img" src="Utoronto_coa.svg.png" alt="">
@@ -81,10 +82,10 @@
             </div>
 
             <div>
-                <p>EXPERIENCE</p>
+                <p class="resume-section">EXPERIENCE</p>
             </div>
 
-            <div class="container">
+            <div class="content">
                 <div id="work-container">
                     <div id="degree-title">
                         <img id="uhnder-img" src="uhnder_inc_logo.jpeg" alt="">
@@ -109,26 +110,63 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="content">
                 <div class="project-card">
                     <h2>CGRA Data Flow Graph Visualizer</h2>
                     <h3>Research Project</h3>
+                    <ul>
+                        <li>Developing a GUI utilizing the SFML graphics library on <strong>C++</strong> to visualize a
+                            data flow graph
+                            and its congestions on a Course Grain Reprogrammable Array (CGRA).</li>
+                        <li>Refactored existing code into a modular Model-View-Controller (MVC) system, improving
+                            maintainability and scalability.</li>
+                        <li>Engaging in regular feedback sessions with a master's student to accurately represent
+                            complex data flow and congestion information within the GUI.</li>
+                    </ul>
                 </div>
+            </div>
+
+            <div class="content">
                 <div class="project-card">
                     <h2>CodeBuddy VS Code Extension </h2>
                     <h3>Capstone Project</h3>
+                    <ul>
+                        <li>Built a programming tutor with the goal of helping novice C programmers learn core coding
+                            concepts. The tool utilizes the OpenAI API and will become available as a VSCode Extension.
+                        </li>
+                        <li>Developed the front end of the user-interface with <strong>HTML, CSS, and
+                                JavaScript</strong>.</li>
+                        <li>Presented organized status updates to project supervisors, ensuring clear communication and
+                            alignment on project milestones and objectives.</li>
+                        <li>Continuing the project after the end of the capstone course to test it on students in the
+                            future.</li>
+                    </ul>
                 </div>
+            </div>
+
+            <div class="content">
                 <div class="project-card">
                     <h2>Interactive Sketch Clustering</h2>
                     <h3>Research Project</h3>
+                    <ul>
+                        <li>Collaborated with a postdoc on extending and enhancing an existing stroke clustering
+                            algorithm.</li>
+                        <li>Implemented a feature to handle incremental inputs in <strong>C++</strong>, allowing the
+                            system to process and incorporate one sketch at a time, rather than requiring the entire
+                            drawing at once.</li>
+                        <li>Analyzed experimental data rigorously and recognized early indicators of the project's
+                            limitations. Despite not achieving the anticipated results, the project allowed me to gain
+                            experience in the area of sketch processing.</li>
+                    </ul>
                 </div>
             </div>
 
+
             <div>
-                <p>SKILLS</p>
+                <p class="resume-section">SKILLS</p>
             </div>
 
-            <div class="container">
+            <div class="content">
                 <div class="skill-container">
 
                     <p>Languages</p>
@@ -149,47 +187,48 @@
                     <li>Mercurial</li>
                     <li>Visual Studio Code</li>
                 </div>
+            </div>
 
+            <div class="content">
                 <div>
                     <h3>Competencies</h3>
-                    <li>Communication</li>
-                    <li>Organization</li>
-                    <li>Collaboration</li>
-                    <li>Problem Solving</li>
-                    <li>Rapid Learning</li>
-                    <li>Time Management</li>
-                    <li>adaptability</li>
+                    <ul>
+                        <li>Communication</li>
+                        <li>Organization</li>
+                        <li>Collaboration</li>
+                        <li>Rapid Learning</li>
+                        <li>Problem Solving</li>
+                        <li>Time Management</li>
+                        <li>Adaptability</li>
+                    </ul>
                 </div>
             </div>
 
-            <div id="resume-content">
-                <div class="resume-section">
-                    <div>
+            <div>
+                <p class="resume-section">VOLUNTEERING</p>
+            </div>
 
-
-                    </div>
-                </div>
-
-
-                <div class="resume-section">
-                    <h2>Volunteering</h2>
-                    <li>Team Leader for SIGGRAPH Conference 2024: Coordinated student volunteer activities for over 200
+            <div class="content">
+                <div>
+                    <li><strong>Team Leader</strong> for 2024 SIGGRAPH Conference: Coordinated student volunteer
+                        activities for
+                        over 200
                         students and provided on-
                         the-ground support for conference attendees and presenters</li>
-                    <li>Student Volunteer for SIGGRAPH Conference 2023: Provided general assistance for attendees and
+                    <li><strong>Student Volunteer</strong> for 2023 SIGGRAPH Conference : Provided general assistance for
+                        attendees and
                         helped contributors demo
                         technologies by providing support with Virtual Reality headset setup</li>
-                    <li>Graphic Design Lead for Ontario Engineering Competition 2022: In charge of designing logo,
+                    <li><strong>Graphic Design Lead</strong> for 2022 Ontario Engineering Competition: In charge of
+                        designing
+                        logo,
                         layout, printing, and theme of
                         marketing materials.</li>
                 </div>
-            </div>
 
-            <br />
-            <div id="contact-content">
-                <p>contact goes here</p>
-            </div> -->
-        </main>
+            </div>
+    </div>
+    </main>
     </div>
     <footer>
         <div>
