you can download my resume

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
                     <a href="https://github.com/silvialpz" class="icon hidden">
                         <img class="icon-img" src="github.png">
                     </a>
-                    <a href="" class="icon hidden">
+                    <a href="Resume.pdf" download class="icon hidden">
                         <img class="icon-img" src="downloading.png">
                     </a>
                 </div>
