tweak to summary

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div>
                         <p>I am a soon-to-be computer engineering graduate from the University of Toronto and a Pearson
-                            Scholar. I am a very visual thinker and artist, I draw and paint
+                            Scholar. I am a very visual thinker, I draw and paint
                             which is why I have an affinity for designing visually appealing user interfaces but beyond
                             that I am interested in how the tools we use work on a lower level. The university courses
                             in computer graphics and computer architecture I’ve taken have inspired my career goal,
