about is a section and footer has absolute position

--- a/public/index.html
+++ b/public/index.html
@@ -14,40 +14,45 @@
     </header> -->
     <div id="page-container">
         <main>
-            <div id="about-content">
-                <div class="portrait-frame hidden">
-                    <img class="portrait-img" src="portrait.jpg">
-                </div>
-                <div class="personal-summary hidden">
-                    <div>
-                        <h1 id="first-name">silvia</h1>
-                        <h1 id="last-name"> LOPEZ</h1>
-                        <div class="rectangle"></div>
+            <section>
+                <div id="about-content">
+                    <div class="portrait-frame hidden">
+                        <img class="portrait-img" src="portrait.jpg">
                     </div>
-                    <div>
-                        <p>I am a soon-to-be computer engineering graduate from the University of Toronto and a Pearson
-                            Scholar. I am a very visual thinker, I draw and paint
-                            which is why I have an affinity for designing visually appealing user interfaces but beyond
-                            that I am interested in how the tools we use work on a lower level. The university courses
-                            in computer graphics and computer architecture I’ve taken have inspired my career goal,
-                            which is to be at the intersection of art and technology as a graphics engineer.</p>
+                    <div class="personal-summary hidden">
+                        <div>
+                            <h1 id="first-name">silvia</h1>
+                            <h1 id="last-name"> LOPEZ</h1>
+                            <div class="rectangle"></div>
+                        </div>
+                        <div>
+                            <p>I am a soon-to-be computer engineering graduate from the University of Toronto and a
+                                Pearson
+                                Scholar. I am a very visual thinker, I draw and paint
+                                which is why I have an affinity for designing visually appealing user interfaces but
+                                beyond
+                                that I am interested in how the tools we use work on a lower level. The university
+                                courses
+                                in computer graphics and computer architecture I’ve taken have inspired my career goal,
+                                which is to be at the intersection of art and technology as a graphics engineer.</p>
+                        </div>
                     </div>
-                </div>
-                <br />
-                <div id="icon-container">
-                    <a href="https://www.linkedin.com/in/silvia-lopez-1a9468204/" class="icon hidden">
-                        <img class="icon-img" src="linkedin.png">
-                    </a>
-                    <a href="https://github.com/silvialpz" class="icon hidden">
-                        <img class="icon-img" src="github.png">
-                    </a>
-                    <a href="Resume.pdf" download class="icon hidden">
-                        <img class="icon-img" src="downloading.png">
-                    </a>
-                </div>
+                    <br />
+                    <div id="icon-container">
+                        <a href="https://www.linkedin.com/in/silvia-lopez-1a9468204/" class="icon hidden">
+                            <img class="icon-img" src="linkedin.png">
+                        </a>
+                        <a href="https://github.com/silvialpz" class="icon hidden">
+                            <img class="icon-img" src="github.png">
+                        </a>
+                        <a href="Resume.pdf" download class="icon hidden">
+                            <img class="icon-img" src="downloading.png">
+                        </a>
+                    </div>
 
-            </div>
-<!-- 
+                </div>
+            </section>
+            <!-- 
             <br />
 
             <div>
