--- a/public/index.html
+++ b/public/index.html
@@ -196,11 +196,11 @@
             </div> -->
         </main>
     </div>
-    <footer>
+    <!-- <footer>
         <div>
             <p>Copyright 2024 by Silvia Lopez</p>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
