--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                                 that I am interested in how the tools we use work on a lower level. The university
                                 courses
                                 in computer graphics and computer architecture I’ve taken have inspired my career goal,
-                                which is to be at the intersection of art and technology as a graphics engineer.</p>
+                                which is to be at the intersection of art and technology.</p>
                         </div>
                     </div>
                     <br />
