changing name back

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="personal-summary hidden">
                         <div>
-                            <h1 id="first-name">WHAT IS GOING ON</h1>
+                            <h1 id="first-name">Silvia</h1>
                             <h1 id="last-name"> LOPEZ</h1>
                             <div class="rectangle"></div>
                         </div>
